--- a/testy.html
+++ b/testy.html
@@ -2,6 +2,8 @@
 <html>
   <body>
     <h1> Tersty </h1>
+    <div id="count">0</div>
+
    
 <script type="text/javascript">
 insertPic();
@@ -10,9 +12,10 @@ var i = 0;
 function insertPic(){
   
   var element = document.createElement('img');
+  var counter = document.getElementById('count');
   console.log(element);
   element.src = 'derp.jpg?v=' + i++;
-
+  counter.innerHTML= i;
   element.onload = function (){ insertPic() };
 
   document.body.appendChild(element);
