test counter bigger fontsize

--- a/testy.html
+++ b/testy.html
@@ -2,7 +2,7 @@
 <html>
   <body>
     <h1> Tersty </h1>
-    <div id="count">0</div>
+    <div style="font-size:30px;" id="count">0</div>
 
    
 <script type="text/javascript">
