--- a/testy.html
+++ b/testy.html
@@ -14,7 +14,7 @@ function insertPic(){
   var element = document.createElement('img');
   var counter = document.getElementById('count');
   console.log(element);
-  element.src = 'derp.jpg?v=' + i++;
+  element.src = 'grumpycat.jpg?v=' + i++;
   counter.innerHTML= i;
   element.onload = function (){ insertPic() };
 
